Popular section added

--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,7 @@
-/* .catalog-list {
+/* .catalog-menu {
   visibility: hidden;
 }
 
-.catalog-title:hover + .catalog-list {
+.catalog-title:hover + .catalog-menu {
   visibility: visible;
 } */
