Catalog macro layout is ready

--- a/css/outline.css
+++ b/css/outline.css
@@ -12,213 +12,12 @@
   background-color: transparent !important;
 }
 
-.main-page {
-    background-image: url("../_tmp/device-index-slides-1.jpg");
-    /* background-image: url("../_tmp/device-index-slides-2.jpg"); */
-    /* background-image: url("../_tmp/device-index-slides-3.jpg"); */
-    /* background-image: url("../_tmp/device-index-overlays.jpg"); */
-    background-repeat: no-repeat;
-    background-position: -120px 0;
-}
-
-.inner-page {
-    background-image: url("../_tmp/device-catalog.jpg");
-    /* background-image: url("../_tmp/device-catalog-overlays.jpg"); */
-    background-repeat: no-repeat;
-    background-position: -120px 0;
-}
-
-.header .logo {
-  outline: 2px solid blue;
-  outline-offset: -2px;
-}
-
-.navigation {
-  outline: 2px solid green;
-  outline-offset: -2px;
-}
-
-.user-navigation {
-  outline: 2px solid purple;
-  outline-offset: -2px;
-}
-
-.site-menu {
-  outline: 2px solid maroon;
-  outline-offset: -2px;
-}
-
-.container {
-  outline: 2px solid red;
-  outline-offset: -2px;
-}
-
-.promo {
-  outline: 2px solid green;
-  outline-offset: -2px;
-}
-
-.promo-control {
-  outline: 2px solid blue;
-  outline-offset: -2px;
-}
-
-.promo-list {
-  outline: 2px solid orange;
-  outline-offset: -2px;
-}
-
-.promo-item {
-  outline: 2px solid purple;
-  outline-offset: -2px;
-}
-
-.promo-image {
-  outline: 2px solid maroon;
-  outline-offset: -2px;
-}
-
-.promo-text {
-  outline: 2px solid gold;
-  outline-offset: -2px;
-}
-
-.popular {
-  outline: 2px solid blue;
-  outline-offset: -2px;
-}
-
-.popular-item {
-  outline: 2px solid purple;
-  outline-offset: -2px;
-}
-
-.popular-link {
-  outline: 2px solid gold;
-  outline-offset: -2px;
-}
-
-.popular-link::before {
-  outline: 2px solid maroon;
-  outline-offset: -2px;
-}
-
-.services {
-  outline: 2px solid blue;
-  outline-offset: -2px;
-}
-
-.services-control {
-  outline: 2px solid green;
-  outline-offset: -2px;
-}
-
-.services-list {
-  outline: 2px solid orange;
-  outline-offset: -2px;
-}
-
-.services-item {
-  outline: 2px solid purple;
-  outline-offset: -2px;
-}
-
-.services-item::before {
-  outline: 2px solid maroon;
-  outline-offset: -2px;
-}
-
-.brands {
-  outline: 2px solid blue;
-  outline-offset: -2px;
-}
-
-.brands-item {
-  outline: 2px solid green;
-  outline-offset: -2px;
-}
-
-.reference {
-  outline: 2px solid blue;
-  outline-offset: -2px;
-}
-
-.reference-follow-btn {
-  outline: 2px solid purple;
-  outline-offset: -2px;
-}
-
-.footer-wrapper {
-  outline: 2px solid red;
-  outline-offset: -2px;
-}
-
-.footer-user-block {
-  outline: 2px solid blue;
-  outline-offset: -2px;
-}
-
-.footer-site-block {
-  outline: 2px solid green;
-  outline-offset: -2px;
-}
-
-.footer-social {
-  outline: 2px solid purple;
-  outline-offset: -2px;
-}
-
-.social-link {
-  outline: 2px solid gold;
-  outline-offset: -2px;
-}
-
-.feedback-form {
-  outline: 2px solid blue;
-  outline-offset: -2px;
-}
-
-.feedback-form > * {
-  outline: 2px solid green;
-  outline-offset: -2px;
-}
-
-.page-title {
-  outline: 2px solid blue;
-  outline-offset: -2px;
-}
-
-.breadcrumbs-list {
-  outline: 2px solid purple;
-  outline-offset: -2px;
-}
-
-.breadcrumbs-item {
-  outline: 2px solid green;
-  outline-offset: -2px;
-}
-
-.filter {
-  outline: 2px solid green;
-  outline-offset: -2px;
-}
-
-.sorting-wrapper {
-  outline: 2px solid gold;
-  outline-offset: -2px;
-}
-
-.catalog {
-  outline: 2px solid red;
-  outline-offset: -2px;
-}
-
-.pagination {
-  outline: 2px solid orange;
-  outline-offset: -2px;
-}
-
-.copyright {
+.header {
   outline: 1px solid red;
+  outline-offset: -1px;
+}
+
+.header * {
+  outline: 1px solid blue;
   outline-offset: -1px;
 }
