--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,4 @@
-/* FONTS */
+/* Fonts */
 
 @font-face {
   font-weight: 300;
@@ -40,7 +40,101 @@
   url("../fonts/opensans-regular-webfont.woff") format("woff");
 }
 
-/* GLOBAL */
+/* Animation */
+
+@-webkit-keyframes bounce {
+  0% {
+    -webkit-transform: translatey(-2000px);
+            transform: translatey(-2000px);
+  }
+  70% {
+    -webkit-transform: translatey(50px);
+            transform: translatey(50px);
+  }
+  85% {
+    -webkit-transform: translatey(-20px);
+            transform: translatey(-20px);
+  }
+  95% {
+    -webkit-transform: translatey(10px);
+            transform: translatey(10px);
+  }
+  100% {
+    -webkit-transform: translatey(0);
+            transform: translatey(0);
+  }
+}
+
+@keyframes bounce {
+  0% {
+    -webkit-transform: translatey(-2000px);
+            transform: translatey(-2000px);
+  }
+  70% {
+    -webkit-transform: translatey(50px);
+            transform: translatey(50px);
+  }
+  85% {
+    -webkit-transform: translatey(-20px);
+            transform: translatey(-20px);
+  }
+  95% {
+    -webkit-transform: translatey(10px);
+            transform: translatey(10px);
+  }
+  100% {
+    -webkit-transform: translatey(0);
+            transform: translatey(0);
+  }
+}
+
+@-webkit-keyframes shake {
+  0%,
+  100% {
+    -webkit-transform: translatex(0);
+            transform: translatex(0);
+  }
+  10%,
+  30%,
+  50%,
+  70%,
+  90% {
+    -webkit-transform: translatex(5px);
+            transform: translatex(5px);
+  }
+  20%,
+  40%,
+  60%,
+  80% {
+    -webkit-transform: translatex(-5px);
+            transform: translatex(-5px);
+  }
+}
+
+@keyframes shake {
+  0%,
+  100% {
+    -webkit-transform: translatex(0);
+            transform: translatex(0);
+  }
+  10%,
+  30%,
+  50%,
+  70%,
+  90% {
+    -webkit-transform: translatex(5px);
+            transform: translatex(5px);
+  }
+  20%,
+  40%,
+  60%,
+  80% {
+    -webkit-transform: translatex(-5px);
+            transform: translatex(-5px);
+  }
+}
+
+/* Global */
 
 body {
   min-width: 1200px;
@@ -88,7 +182,8 @@ a {
 /* Header */
 
 .header {
-  padding: 40px 0 0;
+  padding: 0;
+  padding-top: 40px;
 }
 
 .navigation {
@@ -147,7 +242,6 @@ a {
   display: flex;
   justify-content: space-between;
   width: 440px;
-  min-height: 49px;
   margin-right: 100px;
 
   -webkit-box-pack: justify;
@@ -237,7 +331,7 @@ a {
   flex-shrink: 0;
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
-  padding: 9px 17px 10px;
+  padding: 14px 17px 14px 18px;
 
   vertical-align: middle;
   text-align: center;
@@ -247,12 +341,19 @@ a {
   outline: 0;
   visibility: hidden;
 
+  -webkit-transition-duration: 1ms;
+          transition-duration: 1ms;
+  -webkit-transition-property: visibility;
+          transition-property: visibility;
+
   -ms-flex-negative: 0;
 }
 
 .search-btn:hover::before,
+.search-btn:focus::before,
 .search-btn:active::before,
-.search-field:focus ~ .search-btn::before {
+.search-field:focus ~ .search-btn::before,
+.search-field:valid ~ .search-btn::before {
   content: "";
   position: absolute;
   right: 0;
@@ -263,11 +364,13 @@ a {
   border-bottom: 2px solid #000000;
 }
 
-.search-field:focus ~ .search-btn {
+.search-field:focus ~ .search-btn,
+.search-field:valid ~ .search-btn {
   visibility: visible;
 }
 
-.search-btn:hover {
+.search-btn:hover,
+.search-btn:focus {
   color: #ffffff;
 
   background-color: #000000;
@@ -450,7 +553,6 @@ a {
 }
 
 .header-catalog-item {
-  min-height: 36px;
   margin-right: 60px;
 
   font-weight: 300;
@@ -568,6 +670,12 @@ a {
   letter-spacing: 0.47px;
 }
 
+.btnfix {
+  position: relative;
+  top: 0;
+  left: 0;
+}
+
 .btn {
   position: relative;
 
@@ -641,7 +749,12 @@ a {
   position: relative;
 }
 
+.promo-radio {
+  visibility: hidden;
+}
+
 .promo-list {
+  min-height: 594px;
   margin: 0;
   padding: 0;
 
@@ -650,11 +763,6 @@ a {
 
 .promo-item {
   display: none;
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
-  width: 1160px;
-  min-height: 594px;
-  padding: 20px 0;
 }
 
 .promo-radio:nth-of-type(1):checked ~ .promo-list .promo-item:nth-child(1),
@@ -664,6 +772,10 @@ a {
   display: -ms-flexbox;
   display: flex;
   justify-content: space-between;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  width: 1160px;
+  padding: 20px 0;
 
   -webkit-box-pack: justify;
   -ms-flex-pack: justify;
@@ -862,8 +974,8 @@ a {
 
 .promo-control-list {
   position: absolute;
+  top: 329px;
   right: 103px;
-  bottom: 253px;
 
   display: -webkit-box;
   display: -ms-flexbox;
@@ -892,6 +1004,16 @@ a {
   cursor: pointer;
 }
 
+.promo-radio[id$="1"]:not(:checked) ~ .promo-control-list .promo-control-label[for$="1"]:hover,
+.promo-radio[id$="2"]:not(:checked) ~ .promo-control-list .promo-control-label[for$="2"]:hover,
+.promo-radio[id$="3"]:not(:checked) ~ .promo-control-list .promo-control-label[for$="3"]:hover {
+  background-image: url("../img/slider-button.svg");
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: 12px 12px;
+  opacity: 0.6;
+}
+
 .promo-radio[id$="1"]:checked ~ .promo-control-list .promo-control-label[for$="1"],
 .promo-radio[id$="2"]:checked ~ .promo-control-list .promo-control-label[for$="2"],
 .promo-radio[id$="3"]:checked ~ .promo-control-list .promo-control-label[for$="3"] {
@@ -902,7 +1024,6 @@ a {
 }
 
 .popular {
-  min-height: 238px;
   margin-bottom: 181px;
 }
 
@@ -1026,6 +1147,10 @@ a {
   -ms-flex-align: start;
 }
 
+.services-radio {
+  visibility: hidden;
+}
+
 .services-control-list {
   position: relative;
   top: -20px;
@@ -1034,7 +1159,6 @@ a {
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
   width: 284px;
-  min-height: 168px;
   margin: 0;
   padding: 0;
 
@@ -1123,7 +1247,8 @@ a {
 }
 
 .services-item-title {
-  margin: 0 0 30px;
+  margin: 0;
+  margin-bottom: 30px;
   padding: 0;
 }
 
@@ -1181,7 +1306,6 @@ a {
   position: relative;
 
   width: 260px;
-  min-height: 100px;
 }
 
 .brands-underlay {
@@ -1190,7 +1314,7 @@ a {
   z-index: -1;
 
   width: 260px;
-  min-height: 100px;
+  height: 100px;
 
   background-color: #d8d8d8;
   background-repeat: no-repeat;
@@ -1252,7 +1376,7 @@ a {
   -ms-flex-direction: column;
       flex-direction: column;
   width: 560px;
-  min-height: 520px;
+  /* min-height: 520px; */
 
   -webkit-box-direction: normal;
   -webkit-box-orient: vertical;
@@ -1301,7 +1425,7 @@ a {
 
 .partners-list {
   margin: 0;
-  margin-bottom: auto;
+  margin-bottom: 54px;
   padding: 0;
   padding-left: 35px;
 
@@ -1333,19 +1457,15 @@ a {
   border-radius: 50%;
 }
 
-.uppercase-caption {
+.uppercase-text {
   text-transform: uppercase;
-}
-
-.reference-follow-btn {
-  width: 260px;
 }
 
 .map-link {
   display: block;
   width: 560px;
   height: 222px;
-  margin-bottom: auto;
+  margin-bottom: 69px;
 
   background-color: #e9e9e9;
 }
@@ -1355,7 +1475,10 @@ a {
   height: 222px;
 }
 
-/* CATALOG PAGE */
+.reference-follow-btn {
+  width: 260px;
+  margin-top: auto;
+}
 
 .inner-page .header {
   margin-bottom: 37px;
@@ -1368,8 +1491,8 @@ a {
 .page-title {
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
-  min-height: 48px;
-  margin: 0 0 24px;
+  margin: 0;
+  margin-bottom: 24px;
   padding: 0 60px;
 
   font-weight: 800;
@@ -1384,13 +1507,16 @@ a {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+      flex-wrap: wrap;
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
-  min-height: 24px;
-  margin: 0 0 46px;
+  margin: 0;
+  margin-bottom: 46px;
   padding: 0 60px;
 
   list-style-type: none;
+
+  -ms-flex-wrap: wrap;
 }
 
 .breadcrumbs-item {
@@ -1493,45 +1619,35 @@ a {
 .filter-form {
   align-self: flex-end;
   width: 200px;
-  padding-top: 81px;
+  padding-top: 69px;
   padding-right: 68px;
 
   -ms-flex-item-align: end;
 }
 
 .filter-group {
-  position: relative;
-
   margin: 0;
   padding: 0;
 
   border-style: none;
 }
 
-.filter-group::before {
-  content: "";
-  position: absolute;
-  top: -12px;
-
-  width: 100%;
-  height: 2px;
-
-  background-color: #000000;
-}
-
-.filter-price {
-  margin-bottom: 44px;
-}
-
 .filter-group-title {
+  width: 100%;
   margin: 0;
-  padding: 0;
+  padding-top: 10px;
 
   font-weight: 800;
   font-size: 18px;
   line-height: 24px;
   font-family: "Gilroy", "Arial", sans-serif;
   letter-spacing: 0.18px;
+
+  border-top: 2px solid #000000;;
+}
+
+.filter-price {
+  margin-bottom: 27px;
 }
 
 .filter-price .filter-group-title {
@@ -1543,7 +1659,7 @@ a {
 
   width: 100%;
   height: 2px;
-  margin-bottom: 5px;
+  margin-bottom: 10px;
 
   background-color: #dbdbdb;
 }
@@ -1559,13 +1675,17 @@ a {
   position: absolute;
   top: -10px;
 
-  width: 4px;
-  height: 4px;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  width: 20px;
+  height: 20px;
+  padding: 2px;
 
   background-color: #ababab;
   border: 8px solid #ffffff;
   border-radius: 50%;
-  box-shadow: 0 2px 1px 0 #dddddd;
+  -webkit-box-shadow: 0 2px 1px 0 #dddddd;
+          box-shadow: 0 2px 1px 0 #dddddd;
   cursor: pointer;
 }
 
@@ -1577,20 +1697,60 @@ a {
   left: 107px;
 }
 
+.filter-toggle:focus {
+  outline: thin dotted;
+  outline: 5px auto -webkit-focus-ring-color;
+}
+
 .filter-toggle:active {
-  transform: scale(1.1);
+  -webkit-transform: scale(1.1);
+          transform: scale(1.1);
+}
+
+.filter-price-control {
+  font-weight: 300;
+  font-size: 14px;
+  line-height: 24px;
+  font-family: "Gilroy", "Arial", sans-serif;
+  color: rgba(0, 0, 0, 0.2);
+  letter-spacing: 0;
 }
 
 .filter-price-label {
   display: inline-block;
 
-  font-weight: 300;
-  font-size: 14px;
-  line-height: 24px;
-  font-family: "Gilroy", "Arial", sans-serif;
   vertical-align: baseline;
-  color: rgba(0, 0, 0, 0.2);
-  letter-spacing: 0;
+}
+
+.filter-price-label:first-child {
+  margin-right: 17px;
+}
+
+.filter-price-input {
+  width: 50px;
+
+  font-weight: inherit;
+  color: inherit;
+  letter-spacing: inherit;
+
+  background-color: transparent;
+  border-style: none;
+}
+
+.filter-color {
+  margin-bottom: 31px;
+}
+
+.filter-color .filter-group-title {
+  margin-bottom: 18px;
+}
+
+.filter-bluetooth {
+  margin-bottom: 31px;
+}
+
+.filter-bluetooth .filter-group-title {
+  margin-bottom: 18px;
 }
 
 .filter-option-list {
@@ -1618,22 +1778,6 @@ a {
 
   background-repeat: no-repeat;
   background-position: left;
-}
-
-.filter-color {
-  margin-bottom: 43px;
-}
-
-.filter-color .filter-group-title {
-  margin-bottom: 18px;
-}
-
-.filter-bluetooth .filter-group-title {
-  margin-bottom: 18px;
-}
-
-.filter-bluetooth {
-  margin-bottom: 31px;
 }
 
 .filter-checkbox-field:checked + .filter-option-title:active::before,
@@ -1668,6 +1812,11 @@ a {
 
 .filter-option-title:hover::before {
   opacity: 0.6;
+}
+
+.filter-field:focus + .filter-option-title {
+  outline: thin dotted;
+  outline: 5px auto -webkit-focus-ring-color;
 }
 
 .filter-option-title:active::before {
@@ -1707,10 +1856,16 @@ a {
 }
 
 .sorting-wrapper {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-wrap: wrap;
+      flex-wrap: wrap;
   align-items: baseline;
   width: 760px;
+
+  -webkit-box-align: baseline;
+  -ms-flex-align: baseline;
+  -ms-flex-wrap: wrap;
 }
 
 .sorting-title {
@@ -1730,11 +1885,13 @@ a {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  flex-wrap: wrap;
+      flex-wrap: wrap;
   margin: 0;
   padding: 0;
 
   list-style-type: none;
+
+  -ms-flex-wrap: wrap;
 }
 
 .sorting-type-item {
@@ -1833,7 +1990,8 @@ a {
   right: 27px;
   z-index: 1;
 
-  box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
   width: 60px;
   height: 60px;
   padding: 15px 14px;
@@ -1910,9 +2068,16 @@ a {
 }
 
 .catalog-desc {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
   justify-content: space-between;
   align-items: baseline;
+
+  -webkit-box-align: baseline;
+  -webkit-box-pack: justify;
+  -ms-flex-align: baseline;
+  -ms-flex-pack: justify;
 }
 
 .catalog-title {
@@ -1949,6 +2114,8 @@ a {
 }
 
 .pagination {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
   width: 760px;
   margin: 0 20px 73px 72px;
@@ -1996,12 +2163,15 @@ a {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+      flex-wrap: wrap;
   margin: 0;
   margin-bottom: 21px;
   padding: 0;
   padding-top: 25px;
 
   list-style-type: none;
+
+  -ms-flex-wrap: wrap;
 }
 
 .pagination-item:not(:last-child) {
@@ -2027,8 +2197,6 @@ a {
 /* Footer */
 
 .footer {
-  min-height: 323px;
-
   color: #ffffff;
 
   background-color: #464646;
@@ -2038,6 +2206,7 @@ a {
   position: relative;
 
   padding-top: 54px;
+  padding-bottom: 67px;
 }
 
 .footer .container::before {
@@ -2087,7 +2256,7 @@ a {
 }
 
 .footer .user-link {
-  padding-left: 27px;
+  padding-left: 28px;
 
   background-image: url("../img/user-footer.svg");
   background-repeat: no-repeat;
@@ -2118,15 +2287,21 @@ a {
   align-items: flex-end;
   margin-bottom: 64px;
 
+  -webkit-box-align: end;
   -webkit-box-pack: justify;
+  -ms-flex-align: end;
   -ms-flex-pack: justify;
 }
 
 .footer-site-menu {
   justify-content: space-between;
-  box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
   width: 440px;
   padding: 0 7px;
+
+  -webkit-box-pack: justify;
+  -ms-flex-pack: justify;
 }
 
 .footer-details {
@@ -2144,6 +2319,7 @@ a {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+      flex-wrap: wrap;
   justify-content: center;
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
@@ -2154,8 +2330,11 @@ a {
   list-style-type: none;
 
   -webkit-box-align: center;
+  -webkit-box-pack: center;
   -ms-flex-align: center;
+  -ms-flex-pack: center;
   -ms-flex-pack: distribute;
+  -ms-flex-wrap: wrap;
 }
 
 .social-item:not(:last-child) {
@@ -2216,22 +2395,64 @@ a {
 /* Modal */
 
 .modal {
-  position: relative;
-  z-index: 5;
+  position: fixed;
+  left: 50%;
+  z-index: 3;
 
-  margin: 20px auto; /* ! TEMPORARY ! */
+  display: none;
+  width: 960px;
+  margin-left: -480px;
 
-  -webkit-box-shadow: 0 7px 20px 3px rgba(0, 0, 0, 0.2);
-          box-shadow: 0 7px 20px 3px rgba(0, 0, 0, 0.2);
+  -webkit-box-shadow: 0 10px 20px 10px rgba(0, 0, 0, 0.2);
+          box-shadow: 0 10px 20px 10px rgba(0, 0, 0, 0.2);
 }
 
 .modal-feedback {
+  top: 20px;
+
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
-  width: 960px;
-  padding-top: 90px;
+  padding-top: 87px;
   padding-right: 100px;
   padding-left: 100px;
+
+  background-color: #ffffff;
+}
+
+.modal-map {
+  top: 50%;
+
+  height: 559px;
+  margin-top: -279px;
+
+  background-color: #e5e3df;
+}
+
+.modal-close-btn {
+  position: absolute;
+  top: 22px;
+  right: 22px;
+
+  width: 55px;
+  height: 55px;
+
+  background-color: transparent;
+  background-image: url("../img/modal-close.svg");
+  background-repeat: no-repeat;
+  background-position: center;
+  border-style: none;
+  outline: 0;
+  cursor: pointer;
+  opacity: 0.5;
+}
+
+.modal-close-btn:hover,
+.modal-close-btn:focus {
+  opacity: 1;
+}
+
+.modal-close-btn:active {
+  opacity: 0.3;
 }
 
 .feedback-form {
@@ -2248,12 +2469,12 @@ a {
 
 .feedback-item {
   margin: 0;
-  margin-bottom: 30px;
   padding-top: 3px;
 }
 
 .feedback-input-item {
   width: 360px;
+  margin-bottom: 27px;
 }
 
 .feedback-textarea-item {
@@ -2262,7 +2483,7 @@ a {
 }
 
 .feedback-item-title {
-  display: block;
+  display: inline-block;
   margin-bottom: 7px;
 
   font-weight: 800;
@@ -2318,13 +2539,14 @@ a {
   background-color: rgba(237, 181, 181, 0.5);
 }
 
-.feedback-field[type="text"],
-.feedback-field[type="email"] {
+.feedback-fullname,
+.feedback-email {
   width: 360px;
-  height: 50px;
+  padding-top: 12px;
+  padding-bottom: 14px;
 }
 
-.feedback-textarea-item .feedback-field {
+.feedback-textarea {
   width: 760px;
   height: 156px;
   padding-top: 12px;
@@ -2335,42 +2557,31 @@ a {
   margin-bottom: 78px;
 }
 
-.modal-map {
-  width: 960px;
-  height: 559px;
+.modal-overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 2;
 
-  background-color: #e5e3df;
+  display: none;
+  width: 100%;
+  height: 100%;
 }
 
-.modal-close-btn {
-  position: absolute;
-  top: 22px;
-  right: 22px;
+.show {
+  display: block;
 
-  width: 55px;
-  height: 55px;
-
-  background-color: transparent;
-  background-image: url("../img/modal-close.svg");
-  background-repeat: no-repeat;
-  background-position: center;
-  border-style: none;
-  outline: 0;
-  -webkit-transform: rotate(0);
-          transform: rotate(0);
-  cursor: pointer;
-  opacity: 0.5;
-
-  -webkit-transition-duration: 250ms;
-          transition-duration: 250ms;
-  -webkit-transition-property: opacity, -webkit-transform;
-          transition-property: opacity, -webkit-transform;
-          transition-property: transform, opacity;
-          transition-property: transform, opacity, -webkit-transform;
+  -webkit-animation-name: bounce;
+          animation-name: bounce;
+  -webkit-animation-duration: 0.5s;
+          animation-duration: 0.5s;
 }
 
-.modal-close-btn:hover {
-  -webkit-transform: rotate(45deg);
-          transform: rotate(45deg);
-  opacity: 1;
+.modal-error {
+  -webkit-animation-name: shake;
+          animation-name: shake;
+  -webkit-animation-duration: 0.5s;
+          animation-duration: 0.5s;
+  -webkit-animation-timing-function: ease-in-out;
+          animation-timing-function: ease-in-out;
 }
