--- a/css/style.css
+++ b/css/style.css
@@ -583,7 +583,7 @@ a {
 
   list-style-type: none;
 
-  background-color: #f7e296;
+  background-image: linear-gradient(180deg, transparent 15px, #f7e296 15px);
 }
 
 .header-catalog-menu:hover,
@@ -2423,6 +2423,14 @@ a {
 
 .footer-details:last-of-type {
   text-align: right;
+}
+
+.footer-site-menu .site-menu-link:hover {
+  color: rgba(255, 255, 255, 0.6);
+}
+
+.footer-site-menu .site-menu-link:active {
+  color: rgba(255, 255, 255, 0.3);
 }
 
 .footer-social {
