--- a/css/style.css
+++ b/css/style.css
@@ -1606,6 +1606,17 @@ a {
   background-color: #e9e9e9;
 }
 
+.map-link::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 2;
+
+  width: 560px;
+  height: 222px;
+}
+
 .map-source {
   position: relative;
   z-index: 1;
@@ -2670,7 +2681,7 @@ a {
 }
 
 .modal-feedback {
-  top: 100px;
+  top: 20px;
 
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
